...
  "saved_to_gallery": "Saved to gallery",
  "saving_preferences": "saving preferences",
  "saving_profile": "saving profile",
  "saving_settings": "saving settings",
  "Screen_lock": "Screen lock",
  "Search": "Search",
  "Search_by": "Search by",
  "Search_emoji": "Search emoji",
  "Search_global_users": "Search for global users",
  "Search_global_users_description": "If you turn-on, you can search for any user from others companies or workspacess.",
  "Search_Messages": "Search messages",
  "Search_messages": "Search messages",
  "Searching": "Searching",
...
  "Team_hint_not_read_only": "All users in this team can write messages",
  "Team_hint_private": "Only invited people can join",
  "Team_hint_public": "When disabled, anyone can join the team",
  "Team_Name": "Team name",
  "Team_not_found": "Team not found",
  "team-name-already-exists": "A team with that name already exists",
  "Teams": "Teams",
  "TechSupport": "Tech Support",
  "Terms_of_Service": " Terms of service ",
  "Test_push_notification": "Test push notification",
  "The_maximum_number_of_users_has_been_reached": "The maximum number of users has been reached.",
  "The_room_does_not_exist": "The room does not exist or you may not have access permission",
  "The_user_will_be_able_to_type_in_roomName": "The user will be able to type in {{roomName}}",
...
  "User_joined_the_team": "joined this team",
  "User_left_this_channel": "left the channel",
  "User_not_found_or": "User not found or incorrect password",
  "User_sent_an_attachment": "{{user}} sent an attachment",
  "Username": "Username",
  "Username_or_email": "Username or email",
  "Users": "Users",
  "Uses_server_configuration": "Uses workspace configuration",
  "Verify": "Verify",
  "Verify_email_desc": "We have sent you an email to confirm your registration. If you do not receive an email shortly, please come back and try again.",
  "Version_no": "App version: {{version}}",
  "Vibrate": "Vibrate",
  "Video": "Video",
...
