...
				/>
				{Accounts_PasswordReset && (
					<Button
						title={I18n.t('Forgot_password')}
						type='secondary'
						onPress={this.forgotPassword}
						testID='login-view-forgot-password'
						color={themes[theme].auxiliaryText}
						fontSize={14}
					/>
				)}
				{this.showRegistrationButton ? (
					<View style={styles.bottomContainer}>
...
	};

	render() {
		const { Accounts_ShowFormLogin } = this.props;

		return (
			<FormContainer testID='login-view'>
				<FormContainerInner>
					<LoginServices separator={Accounts_ShowFormLogin} />
					{this.renderUserForm()}
				</FormContainerInner>
			</FormContainer>
		);
...
